--- a/calculadora.css
+++ b/calculadora.css
@@ -4634,7 +4634,8 @@ textarea.form-control {
 }
 
 .meta-rank {
-  font-size: 12px;
+  font-size: 15px;
+  font-weight: bold;
   font-weight: 600;
   color: #333;
 }
